key warning removed, input clear button aligned, search dropdown items z-index issue corrected

--- a/src/pages/Newtab/styles/Newtab.scss
+++ b/src/pages/Newtab/styles/Newtab.scss
@@ -318,7 +318,7 @@ input:autofill#mui-1 {
   left: auto;
   right: auto;
   top: 0;
-  z-index: 5;
+  z-index: 50;
 }
 span.css-10hburv-MuiTypography-root,
 span.MuiListItemText-primary,
